# HoneyGuard

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt  run_large_batch_generation.sh  todo_tools.md  todo_tools_v2.md
config/: tool_config.py  tools.yaml
configs/: code_audit.yaml  data_analysis.yaml  demo.yaml  finance_report.yaml  incident_summary.yaml  log_anomaly.yaml  minimal.yaml  minimal_verify.yaml  multi_agent.yaml  red_blue.yaml  tutorial_full.yaml
docs/: experiment_guide_v1.md  experiment_guide_v2.md  experiment_numbering_spec_v1.md  llm_auditor_acceptance_research_v1.md  matrix_rationale_v2.md  paper_results_template_v1.md  paper_results_template_v2.md  target_surface_taxonomy_v1.md
eval/: README.md  __init__.py  attribution_scorer.py  common.py  outcome_scorer.py
knowledge/: __init__.py  manager.py
logs/: 2_ablation.json  2_ablation.runs.csv  2_run.jsonl  ablation_prompt_opportunity.json  ablation_prompt_opportunity.runs.csv  advanced.jsonl  advanced_results.jsonl  agg_smoke.csv  agg_smoke.json  asb_v2_test_results.jsonl  asb_v2_with_honeypots_test_results.jsonl  attack.jsonl  attack_auto_insider_01_20260311_153504.jsonl  honey_injection_map.json  llm_judge_mt_smoke_20260324_120918.jsonl  llm_judge_mt_smoke_20260324_120918.rows.csv  llm_judge_mt_smoke_20260324_120918.summary.json  llm_judge_smoke_20260324_115320.jsonl  llm_judge_smoke_20260324_115320.rows.csv  llm_judge_smoke_20260324_115320.summary.json  llm_judge_smoke_20260324_115643.jsonl  logger.py  paper_run_20260324_093032.jsonl  paper_smoke_20260323_155204.jsonl  (+7 more)
(+1566 files in other folders)
