[project]
name = "honeyguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "fastapi",
    "langchain",
    "langgraph",
    "python-on-whales",
    "pyyaml",
    "uvicorn",
    "pypdf",
    "openai>=2.13.0",
]
